[gd_scene load_steps=38 format=4 uid="uid://mfmhytite3rx"]

[ext_resource type="Texture2D" uid="uid://cbd7sikanj1cn" path="res://assets/32rogues/tiles.png" id="1_1j2bm"]
[ext_resource type="PackedScene" uid="uid://ck1auwqa8cl0c" path="res://scenes/player_type/rogue_type.tscn" id="1_3au3l"]
[ext_resource type="Script" path="res://scripts/character_selection.gd" id="1_6qven"]
[ext_resource type="PackedScene" uid="uid://coxtxpj8ay5h5" path="res://scenes/player.tscn" id="2_ojtev"]
[ext_resource type="PackedScene" uid="uid://cyhrrq4evgdil" path="res://scenes/player_type/barbarian_type.tscn" id="3_in3f3"]
[ext_resource type="Texture2D" uid="uid://dr6qemq8gfqc" path="res://assets/32rogues/doors/cell.png" id="3_yvk6t"]
[ext_resource type="Texture2D" uid="uid://bbeo6mdvnlwg2" path="res://assets/32rogues/doors/cell-opened.png" id="4_nbi4c"]
[ext_resource type="PackedScene" uid="uid://cxqx7mqyk6krt" path="res://scenes/player_type/holy_type.tscn" id="6_jnjga"]
[ext_resource type="PackedScene" uid="uid://bjqus2w8mosb0" path="res://scenes/player_type/knight_type.tscn" id="7_7gxew"]
[ext_resource type="PackedScene" uid="uid://2gtn4gwciy0f" path="res://scenes/player_type/spellblade_type.tscn" id="8_wt4uk"]
[ext_resource type="Texture2D" uid="uid://dja47v3hj8gr1" path="res://assets/32rogues/pieces/coin_1.png" id="10_d0rf8"]
[ext_resource type="Texture2D" uid="uid://cvrsgi3uh7itl" path="res://assets/32rogues/material/wood outline.png" id="10_pv6fs"]
[ext_resource type="FontFile" uid="uid://bfq4w63uob47b" path="res://assets/alagard.ttf" id="11_4xv2l"]
[ext_resource type="Texture2D" uid="uid://bplxrseksa6qk" path="res://assets/32rogues/material/stone outline.png" id="11_eac4f"]
[ext_resource type="Texture2D" uid="uid://pumbtix4u7n" path="res://assets/32rogues/material/iron2 outline.png" id="12_4aphx"]
[ext_resource type="Texture2D" uid="uid://dpt1i8pwisqfp" path="res://assets/32rogues/gems/red_outline.png" id="13_sw7t1"]
[ext_resource type="Texture2D" uid="uid://d3uucv4ysx6xl" path="res://assets/32rogues/gems/blue_outline.png" id="14_jnuic"]
[ext_resource type="Texture2D" uid="uid://xotl3sadblqa" path="res://assets/32rogues/gems/green_outline.png" id="15_lbcfx"]
[ext_resource type="Texture2D" uid="uid://bnnujej6udq4i" path="res://assets/32rogues/gems/yellow_outline.png" id="16_4tk35"]
[ext_resource type="Texture2D" uid="uid://b50eipwor5oed" path="res://assets/32rogues/gems/outline.png" id="17_6juec"]
[ext_resource type="PackedScene" uid="uid://dunu1cp1jano7" path="res://scenes/pieces/sword_piece.tscn" id="21_ymtgp"]
[ext_resource type="PackedScene" uid="uid://bv0ldcglpasbk" path="res://scenes/pieces/bow_piece.tscn" id="22_8a3fs"]
[ext_resource type="PackedScene" uid="uid://qoryo24dni6g" path="res://scenes/pieces/invisibility_ring_piece.tscn" id="23_fssq8"]
[ext_resource type="Texture2D" uid="uid://beawiix1axv5i" path="res://assets/32rogues/pieces/bordernew2.png" id="24_fmutw"]
[ext_resource type="Texture2D" uid="uid://owtca74mkys0" path="res://assets/32rogues/pieces/relics/health_potion.png" id="25_f5046"]
[ext_resource type="Texture2D" uid="uid://bnmfsm5m0vxgy" path="res://assets/32rogues/pieces/heart.png" id="26_qtjxu"]
[ext_resource type="Texture2D" uid="uid://dmdome0cw4agd" path="res://assets/32rogues/pieces/shield.png" id="27_xchyu"]
[ext_resource type="PackedScene" uid="uid://v7xutm1d7nmt" path="res://scenes/pieces/axe_piece.tscn" id="28_ttw0b"]
[ext_resource type="PackedScene" uid="uid://bfyb02eqj3ipv" path="res://scenes/pieces/mace_piece.tscn" id="29_islwp"]
[ext_resource type="PackedScene" uid="uid://cmw4eeyvxun18" path="res://scenes/pieces/rage_piece.tscn" id="30_pm0gk"]
[ext_resource type="Texture2D" uid="uid://d25di2bwhrub5" path="res://assets/32rogues/pieces/relics/armor.png" id="31_phvei"]
[ext_resource type="Texture2D" uid="uid://mvy2ovge06fi" path="res://assets/32rogues/Icons/Home.png" id="32_oir2d"]
[ext_resource type="Texture2D" uid="uid://dwnp3opnljr31" path="res://assets/32rogues/Icons/Home_highlighted.png" id="33_rulpw"]
[ext_resource type="PackedScene" uid="uid://b74srkyidy144" path="res://scenes/GUI/settings.tscn" id="34_u0h7w"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_knjw7"]
texture = ExtResource("1_1j2bm")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
0:18/0 = 0
1:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
0:20/0 = 0
1:20/0 = 0
0:21/0 = 0
1:21/0 = 0
0:22/0 = 0
1:22/0 = 0

[sub_resource type="TileSet" id="TileSet_gehps"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_knjw7")

[sub_resource type="CircleShape2D" id="CircleShape2D_ba3ls"]

[node name="CharacterSelection" type="Node2D"]
script = ExtResource("1_6qven")

[node name="Background" type="Node2D" parent="."]
position = Vector2(622, 30)

[node name="DungeonTiles" type="TileMapLayer" parent="Background"]
position = Vector2(12, -28)
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAD7/wYAAAAAAAYAAAD6////AAAAAAEAAAD6/wAAAAAAAAEAAAD6/wEAAAABAAEAAAD6/wIAAAAAAAYAAAD6/wMAAAAAAAYAAAD6/wQAAAAAAAYAAAD6/wUAAAAAAAYAAAD6/wYAAAAAAAYAAAD6/wcAAAAAAAYAAAD7////AAAAAAEAAAD7/wAAAAAAAAEAAAD7/wEAAAABAAEAAAD7/wIAAAAAAAYAAAD7/wMAAAAAAAYAAAD7/wQAAAACAAcAAAD7/wUAAAAAAAYAAAD7/wcAAAAAAAYAAAD8////AAAAAAEAAAD8/wAAAAAAAAEAAAD8/wEAAAABAAEAAAD8/wIAAAAAAAYAAAD8/wMAAAAAAAYAAAD8/wQAAAAAAAYAAAD8/wUAAAACAAoAAAD8/wYAAAAAAAYAAAD8/wcAAAAAAAYAAAD9////AAAAAAEAAAD9/wAAAAAAAAEAAAD9/wEAAAABAAEAAAD9/wIAAAACAAcAAAD9/wMAAAAAAAYAAAD9/wQAAAAAAAYAAAD9/wUAAAAAAAYAAAD9/wYAAAAAAAYAAAD9/wcAAAAAAAYAAAD+////AAAAAAEAAAD+/wAAAAAAAAEAAAD+/wEAAAABAAEAAAD+/wIAAAAAAAYAAAD+/wMAAAAAAAYAAAD+/wQAAAAAAAYAAAD+/wUAAAAAAAYAAAD+/wYAAAAAAAYAAAD+/wcAAAAAAAYAAAD/////AAAAAAEAAAD//wAAAAAAAAEAAAD//wEAAAABAAEAAAD//wIAAAAAAAYAAAD//wMAAAADAAYAAAD//wQAAAAAAAYAAAD//wUAAAAAAAYAAAD//wYAAAAAAAYAAAD//wcAAAAAAAYAAAAAAP//AAAAAAEAAAAAAAAAAAAAAAEAAAAAAAEAAAABAAEAAAAAAAIAAAAAAAYAAAAAAAMAAAAAAAYAAAAAAAQAAAAAAAYAAAAAAAUAAAAAAAYAAAAAAAYAAAAAAAYAAAAAAAcAAAAAAAYAAAABAP//AAAAAAEAAAABAAAAAAAAAAEAAAABAAEAAAABAAEAAAABAAIAAAAAAAYAAAABAAMAAAAAAAYAAAABAAQAAAACAAkAAAABAAUAAAAAAAYAAAABAAYAAAAAAAYAAAABAAcAAAAAAAYAAAACAP//AAAAAAEAAAACAAAAAAAAAAEAAAACAAEAAAABAAEAAAACAAIAAAAAAAYAAAACAAMAAAAAAAYAAAACAAQAAAAAAAYAAAACAAUAAAAAAAYAAAACAAYAAAAAAAYAAAACAAcAAAAAAAYAAAADAP//AAAAAAEAAAADAAAAAAAAAAEAAAADAAEAAAABAAEAAAADAAIAAAADAAkAAAADAAMAAAAAAAYAAAADAAQAAAAAAAYAAAADAAUAAAADAAoAAAADAAYAAAAAAAYAAAADAAcAAAAAAAYAAAAEAP//AAAAAAEAAAAEAAAAAAAAAAEAAAAEAAEAAAABAAEAAAAEAAIAAAAAAAYAAAAEAAMAAAAAAAYAAAAEAAQAAAAAAAYAAAAEAAUAAAAAAAYAAAAEAAYAAAAAAAYAAAAEAAcAAAAAAAYAAAAFAP//AAAAAAEAAAAFAAAAAAAAAAEAAAAFAAEAAAABAAEAAAAFAAIAAAAAAAYAAAAFAAMAAAAAAAYAAAAFAAQAAAAAAAYAAAAFAAUAAAAAAAYAAAAFAAYAAAAAAAYAAAAFAAcAAAAAAAYAAAAGAP//AAAAAAEAAAAGAAAAAAAAAAEAAAAGAAEAAAABAAEAAAAGAAIAAAAAAAYAAAAGAAMAAAAAAAYAAAAGAAQAAAAAAAYAAAAGAAUAAAAAAAYAAAAGAAYAAAAAAAYAAAAGAAcAAAAAAAYAAAAHAP//AAAAAAEAAAAHAAAAAAAAAAEAAAAHAAEAAAABAAEAAAAHAAIAAAACAAcAAAAHAAMAAAAAAAYAAAAHAAQAAAADAAYAAAAHAAUAAAAAAAYAAAAHAAYAAAAAAAYAAAAHAAcAAAAAAAYAAAAIAP//AAAAAAEAAAAIAAAAAAAAAAEAAAAIAAEAAAABAAEAAAAIAAIAAAAAAAYAAAAIAAMAAAAAAAYAAAAIAAQAAAAAAAYAAAAIAAUAAAAAAAYAAAAIAAYAAAAAAAYAAAAIAAcAAAAAAAYAAAA=")
tile_set = SubResource("TileSet_gehps")

[node name="DungeonTilesDetails" type="TileMapLayer" parent="Background/DungeonTiles"]
tile_map_data = PackedByteArray("AAD9/wEAAAAGABAAAAAEAAIAAAAHABAAAAD//wIAAAAEABEAAAD//wUAAAABABYAAAACAAMAAAAAABQAAAADAAQAAAABABUAAAD8/wMAAAAAABUAAAABAAYAAAAKABMAAAA=")
tile_set = SubResource("TileSet_gehps")

[node name="DoorOpen" type="Sprite2D" parent="Background"]
position = Vector2(-388, 212)
scale = Vector2(5, 5)
texture = ExtResource("3_yvk6t")

[node name="DoorClosed" type="Sprite2D" parent="Background"]
visible = false
position = Vector2(-388, 212)
scale = Vector2(5, 5)
texture = ExtResource("4_nbi4c")

[node name="Player" parent="." instance=ExtResource("2_ojtev")]
position = Vector2(-510, 503)

[node name="RogueType" parent="." instance=ExtResource("1_3au3l")]
offset_left = 243.0
offset_top = 564.0
offset_right = 275.0
offset_bottom = 596.0
scale = Vector2(10, 10)

[node name="BarbarianType" parent="." instance=ExtResource("3_in3f3")]
offset_left = 473.0
offset_top = 329.0
offset_right = 505.0
offset_bottom = 361.0
scale = Vector2(10, 10)

[node name="MageType" parent="." instance=ExtResource("6_jnjga")]
modulate = Color(0.205117, 0.205117, 0.205117, 1)
offset_left = 856.0
offset_top = 223.0
offset_right = 888.0
offset_bottom = 255.0
scale = Vector2(10, 10)
disabled = true

[node name="KnightType" parent="." instance=ExtResource("7_7gxew")]
modulate = Color(0.203922, 0.203922, 0.203922, 1)
offset_left = 1443.0
offset_top = 571.0
offset_right = 1475.0
offset_bottom = 603.0
scale = Vector2(10, 10)
disabled = true
flip_h = false

[node name="SpellbladeType" parent="." instance=ExtResource("8_wt4uk")]
modulate = Color(0.203922, 0.203922, 0.203922, 1)
offset_left = 1174.0
offset_top = 349.0
offset_right = 1206.0
offset_bottom = 381.0
scale = Vector2(10, 10)
disabled = true

[node name="Panel" type="Panel" parent="."]
visible = false
offset_left = -14.0
offset_right = 1951.0
offset_bottom = 63.0

[node name="Material" type="Control" parent="."]
z_index = 31
layout_mode = 3
anchors_preset = 0
offset_left = 1511.0
offset_top = -7.0
offset_right = 1551.0
offset_bottom = 33.0
scale = Vector2(2, 2)

[node name="Panel" type="Panel" parent="Material"]
layout_mode = 0
offset_left = -761.0
offset_top = 3.0
offset_right = 208.0
offset_bottom = 36.0

[node name="HBoxContainer" type="HBoxContainer" parent="Material"]
layout_mode = 0
offset_left = -81.0
offset_right = 202.0
offset_bottom = 40.0
theme_override_constants/separation = 41

[node name="Coin" type="Label" parent="Material/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("11_4xv2l")
text = ": 999"

[node name="Sprite2D" type="Sprite2D" parent="Material/HBoxContainer/Coin"]
position = Vector2(-17, 7.5)
texture = ExtResource("17_6juec")

[node name="Sprite2D2" type="Sprite2D" parent="Material/HBoxContainer/Coin"]
position = Vector2(-17, 7)
scale = Vector2(0.7, 0.7)
texture = ExtResource("10_d0rf8")

[node name="CoinArea2D" type="Area2D" parent="Material/HBoxContainer/Coin" groups=["Effect"]]
position = Vector2(-16, 6.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Material/HBoxContainer/Coin/CoinArea2D"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_ba3ls")

[node name="Wood" type="Label" parent="Material/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("11_4xv2l")
text = ": 999"

[node name="Sprite2D" type="Sprite2D" parent="Material/HBoxContainer/Wood"]
position = Vector2(-17, 7.5)
texture = ExtResource("10_pv6fs")

[node name="WoodArea2D" type="Area2D" parent="Material/HBoxContainer/Wood" groups=["Effect"]]
position = Vector2(-16, 6.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Material/HBoxContainer/Wood/WoodArea2D"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_ba3ls")

[node name="Stone" type="Label" parent="Material/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("11_4xv2l")
text = ": 999"

[node name="Sprite2D" type="Sprite2D" parent="Material/HBoxContainer/Stone"]
position = Vector2(-17, 7.5)
texture = ExtResource("11_eac4f")

[node name="StoneArea2D" type="Area2D" parent="Material/HBoxContainer/Stone" groups=["Effect"]]
position = Vector2(-16, 6.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Material/HBoxContainer/Stone/StoneArea2D"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_ba3ls")

[node name="Iron" type="Label" parent="Material/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("11_4xv2l")
text = ": 999"

[node name="Sprite2D" type="Sprite2D" parent="Material/HBoxContainer/Iron"]
position = Vector2(-17, 7.5)
texture = ExtResource("12_4aphx")

[node name="IronArea2D" type="Area2D" parent="Material/HBoxContainer/Iron" groups=["Effect"]]
position = Vector2(-16, 6.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Material/HBoxContainer/Iron/IronArea2D"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_ba3ls")

[node name="Gems" type="Control" parent="."]
z_index = 31
layout_mode = 3
anchors_preset = 0
offset_left = 72.0
offset_top = -7.0
offset_right = 112.0
offset_bottom = 33.0
scale = Vector2(2, 2)

[node name="HBoxContainer" type="HBoxContainer" parent="Gems"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 41

[node name="RedGem" type="Label" parent="Gems/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("11_4xv2l")
text = ": 999"

[node name="Sprite2D" type="Sprite2D" parent="Gems/HBoxContainer/RedGem"]
position = Vector2(-17, 7.5)
texture = ExtResource("13_sw7t1")

[node name="RedGemArea2D" type="Area2D" parent="Gems/HBoxContainer/RedGem" groups=["Effect"]]
position = Vector2(-16, 6.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gems/HBoxContainer/RedGem/RedGemArea2D"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_ba3ls")

[node name="BlueGem" type="Label" parent="Gems/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("11_4xv2l")
text = ": 999"

[node name="Sprite2D" type="Sprite2D" parent="Gems/HBoxContainer/BlueGem"]
position = Vector2(-17, 7.5)
texture = ExtResource("14_jnuic")

[node name="BlueGemArea2D" type="Area2D" parent="Gems/HBoxContainer/BlueGem" groups=["Effect"]]
position = Vector2(-16, 6.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gems/HBoxContainer/BlueGem/BlueGemArea2D"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_ba3ls")

[node name="GreenGem" type="Label" parent="Gems/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("11_4xv2l")
text = ": 999"

[node name="Sprite2D" type="Sprite2D" parent="Gems/HBoxContainer/GreenGem"]
position = Vector2(-17, 7.5)
texture = ExtResource("15_lbcfx")

[node name="GreemGemArea2D" type="Area2D" parent="Gems/HBoxContainer/GreenGem" groups=["Effect"]]
position = Vector2(-16, 6.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gems/HBoxContainer/GreenGem/GreemGemArea2D"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_ba3ls")

[node name="YellowGem" type="Label" parent="Gems/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("11_4xv2l")
text = ": 999"

[node name="Sprite2D" type="Sprite2D" parent="Gems/HBoxContainer/YellowGem"]
position = Vector2(-17, 7.5)
texture = ExtResource("16_4tk35")

[node name="YellowGemArea2D" type="Area2D" parent="Gems/HBoxContainer/YellowGem" groups=["Effect"]]
position = Vector2(-16, 6.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gems/HBoxContainer/YellowGem/YellowGemArea2D"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_ba3ls")

[node name="Back" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 35.0
offset_top = 927.0
offset_right = 75.0
offset_bottom = 967.0

[node name="BackButton" type="TextureButton" parent="Back"]
layout_mode = 0
offset_top = 92.0
offset_right = 219.0
offset_bottom = 123.0

[node name="Label" type="Label" parent="Back/BackButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("11_4xv2l")
theme_override_font_sizes/font_size = 32
text = "Back to village"

[node name="DescriptionRogue" type="ColorRect" parent="."]
visible = false
offset_left = 748.0
offset_top = 677.0
offset_right = 1221.0
offset_bottom = 932.0
color = Color(0, 0, 0, 0.439216)

[node name="Name" type="Label" parent="DescriptionRogue"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_right = 45.0
offset_bottom = 30.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Rogue"

[node name="Pieces" type="Label" parent="DescriptionRogue"]
layout_mode = 0
offset_left = 10.0
offset_top = 118.0
offset_right = 108.0
offset_bottom = 148.0
theme_override_font_sizes/font_size = 32
text = "Pieces:"

[node name="Relics" type="Label" parent="DescriptionRogue"]
layout_mode = 0
offset_left = 10.0
offset_top = 194.0
offset_right = 108.0
offset_bottom = 224.0
theme_override_font_sizes/font_size = 32
text = "Relic:"

[node name="HBoxContainer" type="HBoxContainer" parent="DescriptionRogue"]
layout_mode = 0
offset_left = 147.0
offset_top = 134.0
offset_right = 291.0
offset_bottom = 174.0
theme_override_constants/separation = 72

[node name="Control" type="Control" parent="DescriptionRogue/HBoxContainer"]
layout_mode = 2

[node name="SwordPiece" parent="DescriptionRogue/HBoxContainer/Control" instance=ExtResource("21_ymtgp")]

[node name="Control2" type="Control" parent="DescriptionRogue/HBoxContainer"]
layout_mode = 2

[node name="BowPiece" parent="DescriptionRogue/HBoxContainer/Control2" instance=ExtResource("22_8a3fs")]

[node name="Control3" type="Control" parent="DescriptionRogue/HBoxContainer"]
layout_mode = 2

[node name="InvisibilityRingPiece" parent="DescriptionRogue/HBoxContainer/Control3" instance=ExtResource("23_fssq8")]

[node name="Relic" type="TextureRect" parent="DescriptionRogue"]
modulate = Color(0.235294, 0.235294, 0.235294, 1)
layout_mode = 0
offset_left = 116.0
offset_top = 181.0
offset_right = 156.0
offset_bottom = 221.0
scale = Vector2(1.55, 1.55)
texture = ExtResource("24_fmutw")

[node name="Sprite2D" type="Sprite2D" parent="DescriptionRogue"]
position = Vector2(148, 210)
scale = Vector2(2, 2)
texture = ExtResource("25_f5046")

[node name="HBoxContainer2" type="HBoxContainer" parent="DescriptionRogue"]
layout_mode = 0
offset_left = 10.0
offset_top = 37.0
offset_right = 432.0
offset_bottom = 77.0
theme_override_constants/separation = 25

[node name="Coin" type="Label" parent="DescriptionRogue/HBoxContainer2"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Cost: 15"

[node name="CoinSprite" type="Control" parent="DescriptionRogue/HBoxContainer2"]
visible = false
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="DescriptionRogue/HBoxContainer2/CoinSprite"]
position = Vector2(-1, 17)
scale = Vector2(1.5, 1.5)
texture = ExtResource("10_d0rf8")

[node name="HP" type="Label" parent="DescriptionRogue/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "HP: 50"

[node name="HPSprite" type="Control" parent="DescriptionRogue/HBoxContainer2"]
layout_mode = 2

[node name="Sprite2D2" type="Sprite2D" parent="DescriptionRogue/HBoxContainer2/HPSprite"]
position = Vector2(-2, 16)
scale = Vector2(2, 2)
texture = ExtResource("26_qtjxu")

[node name="Shield2" type="Label" parent="DescriptionRogue/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Shield: 6"

[node name="Shield" type="Control" parent="DescriptionRogue/HBoxContainer2"]
layout_mode = 2

[node name="Sprite2D3" type="Sprite2D" parent="DescriptionRogue/HBoxContainer2/Shield"]
position = Vector2(-9, 16)
scale = Vector2(1.5, 1.5)
texture = ExtResource("27_xchyu")

[node name="DescriptionBarbarian" type="ColorRect" parent="."]
visible = false
offset_left = 748.0
offset_top = 677.0
offset_right = 1230.0
offset_bottom = 932.0
color = Color(0, 0, 0, 0.439216)

[node name="Name" type="Label" parent="DescriptionBarbarian"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_right = 45.0
offset_bottom = 30.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Barbarian"

[node name="Pieces" type="Label" parent="DescriptionBarbarian"]
layout_mode = 0
offset_left = 10.0
offset_top = 118.0
offset_right = 108.0
offset_bottom = 148.0
theme_override_font_sizes/font_size = 32
text = "Pieces:"

[node name="Relics" type="Label" parent="DescriptionBarbarian"]
layout_mode = 0
offset_left = 10.0
offset_top = 194.0
offset_right = 108.0
offset_bottom = 224.0
theme_override_font_sizes/font_size = 32
text = "Relic:"

[node name="HBoxContainer" type="HBoxContainer" parent="DescriptionBarbarian"]
layout_mode = 0
offset_left = 147.0
offset_top = 134.0
offset_right = 291.0
offset_bottom = 174.0
theme_override_constants/separation = 72

[node name="Control" type="Control" parent="DescriptionBarbarian/HBoxContainer"]
layout_mode = 2

[node name="AxePiece" parent="DescriptionBarbarian/HBoxContainer/Control" instance=ExtResource("28_ttw0b")]

[node name="Control2" type="Control" parent="DescriptionBarbarian/HBoxContainer"]
layout_mode = 2

[node name="MacePiece" parent="DescriptionBarbarian/HBoxContainer/Control2" instance=ExtResource("29_islwp")]

[node name="Control3" type="Control" parent="DescriptionBarbarian/HBoxContainer"]
layout_mode = 2

[node name="RagePiece" parent="DescriptionBarbarian/HBoxContainer/Control3" instance=ExtResource("30_pm0gk")]

[node name="Relic" type="TextureRect" parent="DescriptionBarbarian"]
modulate = Color(0.235294, 0.235294, 0.235294, 1)
layout_mode = 0
offset_left = 116.0
offset_top = 181.0
offset_right = 156.0
offset_bottom = 221.0
scale = Vector2(1.55, 1.55)
texture = ExtResource("24_fmutw")

[node name="Sprite2D" type="Sprite2D" parent="DescriptionBarbarian"]
position = Vector2(146, 213)
scale = Vector2(1.8, 1.8)
texture = ExtResource("31_phvei")

[node name="HBoxContainer2" type="HBoxContainer" parent="DescriptionBarbarian"]
layout_mode = 0
offset_left = 10.0
offset_top = 37.0
offset_right = 432.0
offset_bottom = 77.0
theme_override_constants/separation = 25

[node name="Coin" type="Label" parent="DescriptionBarbarian/HBoxContainer2"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Cost: 15"

[node name="CoinSprite" type="Control" parent="DescriptionBarbarian/HBoxContainer2"]
visible = false
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="DescriptionBarbarian/HBoxContainer2/CoinSprite"]
position = Vector2(-1, 17)
scale = Vector2(1.5, 1.5)
texture = ExtResource("10_d0rf8")

[node name="HP" type="Label" parent="DescriptionBarbarian/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "HP: 70"

[node name="HPSprite" type="Control" parent="DescriptionBarbarian/HBoxContainer2"]
layout_mode = 2

[node name="Sprite2D2" type="Sprite2D" parent="DescriptionBarbarian/HBoxContainer2/HPSprite"]
position = Vector2(-2, 16)
scale = Vector2(2, 2)
texture = ExtResource("26_qtjxu")

[node name="Shield" type="Label" parent="DescriptionBarbarian/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Shield: 10"

[node name="ShieldSprite" type="Control" parent="DescriptionBarbarian/HBoxContainer2"]
layout_mode = 2

[node name="Sprite2D3" type="Sprite2D" parent="DescriptionBarbarian/HBoxContainer2/ShieldSprite"]
position = Vector2(-9, 16)
scale = Vector2(1.5, 1.5)
texture = ExtResource("27_xchyu")

[node name="Home" type="TextureButton" parent="."]
offset_left = 1840.0
offset_top = 80.0
offset_right = 1872.0
offset_bottom = 112.0
scale = Vector2(2, 1.93)
texture_normal = ExtResource("32_oir2d")
texture_hover = ExtResource("33_rulpw")

[node name="Pause" type="Control" parent="."]
visible = false
z_index = 50
layout_mode = 3
anchors_preset = 0
offset_left = 663.0
offset_top = 18.0
offset_right = 703.0
offset_bottom = 58.0

[node name="ColorRect2" type="ColorRect" parent="Pause"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -844.0
offset_top = -70.0
offset_right = 1399.0
offset_bottom = 1096.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.807843)

[node name="ColorRect" type="ColorRect" parent="Pause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = 894.0
offset_right = 619.0
offset_bottom = 988.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.517647)

[node name="Settings" parent="Pause" instance=ExtResource("34_u0h7w")]
layout_mode = 1
offset_left = 280.0
offset_top = 456.0
offset_right = 280.0
offset_bottom = 456.0

[node name="Back" type="Button" parent="Pause"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 0
offset_left = 17.0
offset_top = 811.0
offset_right = 147.0
offset_bottom = 851.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("11_4xv2l")
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="Menu" type="Button" parent="Pause"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 0
offset_left = 299.0
offset_top = 811.0
offset_right = 429.0
offset_bottom = 851.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("11_4xv2l")
theme_override_font_sizes/font_size = 32
text = "Exit"

[node name="Progress" type="Label" parent="Pause"]
visible = false
layout_mode = 0
offset_left = -29.0
offset_top = 946.0
offset_right = 617.0
offset_bottom = 976.0
theme_override_font_sizes/font_size = 32
text = "Please note all loot and progress will be lost"

[connection signal="mouse_entered" from="RogueType" to="." method="_on_rogue_type_mouse_entered"]
[connection signal="mouse_exited" from="RogueType" to="." method="_on_rogue_type_mouse_exited"]
[connection signal="mouse_entered" from="BarbarianType" to="." method="_on_barbarian_type_mouse_entered"]
[connection signal="mouse_exited" from="BarbarianType" to="." method="_on_barbarian_type_mouse_exited"]
[connection signal="mouse_entered" from="Back/BackButton" to="." method="_on_back_button_mouse_entered"]
[connection signal="mouse_exited" from="Back/BackButton" to="." method="_on_back_button_mouse_exited"]
[connection signal="pressed" from="Back/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="Pause/Back" to="." method="_on_back_pressed"]
[connection signal="mouse_entered" from="Pause/Menu" to="." method="_on_menu_mouse_entered"]
[connection signal="mouse_exited" from="Pause/Menu" to="." method="_on_menu_mouse_exited"]
[connection signal="pressed" from="Pause/Menu" to="." method="_on_menu_pressed"]
